{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 140,
  "lineage": "c32f7580-db5f-8941-8dc4-51bf641e9cb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "deploymentserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-7c4f7097",
            "arn": "arn:aws:ec2:eu-central-1:658994208324:instance/i-0197051cd4f9a1f3c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0197051cd4f9a1f3c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "monitoring": false,
            "primary_network_interface_id": "eni-02defc3200f9ca50f",
            "private_dns": "ip-172-31-5-130.eu-central-1.compute.internal",
            "private_ip": "172.31.5.130",
            "public_dns": "ec2-18-195-97-231.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.97.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a5ca4f34c140eae5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_splunk_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577526c",
            "tags": {
              "Name": "DS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8d5a377b6d225eb"
            ]
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "indexer",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-7c4f7097",
            "arn": "arn:aws:ec2:eu-central-1:658994208324:instance/i-0368568346b0f3e79",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0368568346b0f3e79",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "monitoring": false,
            "primary_network_interface_id": "eni-06cce5b1b24f1c0db",
            "private_dns": "ip-172-31-13-42.eu-central-1.compute.internal",
            "private_ip": "172.31.13.42",
            "public_dns": "ec2-3-123-16-124.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.16.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-060b7f86251d3c136",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_splunk_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577526c",
            "tags": {
              "Name": "IDX"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8d5a377b6d225eb"
            ]
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-7c4f7097",
            "arn": "arn:aws:ec2:eu-central-1:658994208324:instance/i-0143afb46f461ef8d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0143afb46f461ef8d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b246d1428b767ba0",
            "private_dns": "ip-172-31-31-237.eu-central-1.compute.internal",
            "private_ip": "172.31.31.237",
            "public_dns": "ec2-18-195-215-47.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.215.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c399eac9fa3e6c1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_splunk_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8ee39af5",
            "tags": {
              "Name": "IDX"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8d5a377b6d225eb"
            ]
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-7c4f7097",
            "arn": "arn:aws:ec2:eu-central-1:658994208324:instance/i-0b70f1f258eb6f302",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b70f1f258eb6f302",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba8cb0409670bbf8",
            "private_dns": "ip-172-31-39-148.eu-central-1.compute.internal",
            "private_ip": "172.31.39.148",
            "public_dns": "ec2-18-184-147-7.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.147.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00d923f350aea1fe7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_splunk_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d8efda92",
            "tags": {
              "Name": "IDX"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8d5a377b6d225eb"
            ]
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-7c4f7097",
            "arn": "arn:aws:ec2:eu-central-1:658994208324:instance/i-06a7d20b372ca5c2b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06a7d20b372ca5c2b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec2ed362115e26f2",
            "private_dns": "ip-172-31-7-13.eu-central-1.compute.internal",
            "private_ip": "172.31.7.13",
            "public_dns": "ec2-3-123-32-197.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.32.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0aa9f4fb9961e94d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg_splunk_all"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577526c",
            "tags": {
              "Name": "CM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e8d5a377b6d225eb"
            ]
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:658994208324:security-group/sg-0e8d5a377b6d225eb",
            "description": "Common rules for all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8d5a377b6d225eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "sg_splunk_all",
            "name_prefix": null,
            "owner_id": "658994208324",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07a5e66e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:658994208324:security-group/sg-06aab57f4f721e3b6",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aab57f4f721e3b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_splunk_elb",
            "name_prefix": null,
            "owner_id": "658994208324",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07a5e66e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "searchhead",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:658994208324:security-group/sg-0a05d5baf7ce5a78c",
            "description": "Used in the  terraform",
            "egress": [],
            "id": "sg-0a05d5baf7ce5a78c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06aab57f4f721e3b6"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "sg_splunk_searchhead",
            "name_prefix": null,
            "owner_id": "658994208324",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07a5e66e"
          },
          "dependencies": [
            "aws_security_group.elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "interco",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-875932215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e8d5a377b6d225eb",
            "self": false,
            "source_security_group_id": "sg-0e8d5a377b6d225eb",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    }
  ]
}